# ehentaiCrawler-libcurl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  downloader.h  ehentaiCrawler-libcurl.pro  infoPageAnalyzer.h  pageAnalyzer.cpp  pageAnalyzer.h  pageanalyzer.cpp  pageanalyzer.h  picPageAnalyzer.cpp
docker/: Dockerfile
src/: config.h  downloader.cpp  downloader.h  downloader_test.cpp  ehentaiCrawler-libcurl.cpp  infoPageAnalyzer.cpp  infoPageAnalyzer.h  infoPageAnalyzer_test.cpp  main.cpp  pageAnalyzer.cpp  pageAnalyzer.h  picPageAnalyzer.cpp  picPageAnalyzer.h  picPageAnalyzer_test.cpp
src/include/: config.h
src/pageAnalyzer/: CMakeLists.txt  infoPageAnalyzer.cpp  infoPageAnalyzer.h  pageAnalyzer.h  picPageAnalyzer.h
src/test/: CMakeLists.txt  infoPageAnalyzer_test.cpp  picPageAnalyzer_test.cpp
